Gen API documentation(openAPI spec) and gRPC stub for golang
